# hlkld2420

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yaml
cmake/toolchains/: pico.cmake
core/: CMakeLists.txt  README.md  ld2420.c  ld2420_stream.c  ld2420_stream_test.c  ld2420_test.c
core/include/ld2420/: ld2420.h  ld2420_stream.h
examples/: README.md
examples/pico/: CMakeLists.txt  README.md  basic_example.c  interrupt_example.c  main.c
include/ld2420/: ld2420.h  ld2420_pico.h
platform/pico/: CMakeLists.txt  README.md  ld2420_pico.c
platform/pico/include/ld2420/platform/pico/: ld2420_pico.h
src/: CMakeLists.txt  README.md  ld2420.c  ld2420_pico.c  ld2420_stream.c
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_txrx_fns.c
